# rust_python_example

./: .gitignore  LICENSE  README.md
back_end/: main.py
front_end/: package-lock.json  package.json  vite.config.js
front_end/src/: App.jsx
qr_code_parser/: Cargo.toml  pyproject.toml
qr_code_parser/src/: lib.rs
test_qr/: Cargo.toml
test_qr/src/: main.rs
